# my-first

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  my-first.cabal
app/: Main.hs
src/: MyFirst.hs  Prelude.hs
